--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="app">
-        <h1>Quiz <small>(Developer summer bootcamp-NANTECH Academy)</small></h1>
+        <h1>Quiz <small>(NANTECH Academy Developer bootcamp)</small></h1>
         <div class="quiz">
             <h2 id="question">Question goes  here</h2>
             <div id="answer-button">
